--- a/public/html/demo.html
+++ b/public/html/demo.html
@@ -4,6 +4,25 @@
 			<div class="page-header">
 				<h1>Demo <small>try it out online and for free</small></h1>
 			</div>
+
+			<p class="lead">
+				Need to try <code>omp4j</code> before installation? No problem! Simply insert your code to the left area
+				and click translate button. The preprocessed text will appear in the right area. Easy as breathing.
+				Have fun!
+			</p>
+
+			<p>
+				Please note that the online code transformation is employed as a demo only and isn't meant as a public cloud.
+				The <strong>computation time is limited</strong> and <strong>only one file is supported</strong>. Also
+				<strong>public classes are forbidden</strong>.
+				You are asked to try only basic examples and share the computation power with other users. For more
+				complicated resources simply <a href="/download">download</a> the preprocessor and use it locally. Thank you.
+			</p>
+
+			<blockquote>
+				By clicking the translate button you agree to give up copyright of the code you require to preprocess.
+				Furthermore, you agree that the code may be stored, used, sold or whatever we want. It is our code now :)
+			</blockquote>
 		</div>
 	</div>
 
@@ -25,12 +44,6 @@
 				<textarea type="text" ng-model="demo.result" class="form-control" rows="30" placeholder="Result code will appear here."/></textarea>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-md-12">
-				<blockquote>
-					By using this demo the user agrees to...
-				</blockquote>
-			</div>
-		</div>
+
 	</form>
 </div>
