--- a/public/html/home.html
+++ b/public/html/home.html
@@ -1,19 +1,19 @@
 <div class="row">
 	<div class="col-md-12">
 		<div class="page-header">
-			<h1>OpenMP <small>for Java 6/7/8</small></h1>
+			<h1>omp4j <small>OpenMP for Java 6/7/8</small></h1>
 		</div>
 
 		<div class="jumbotron">
 			<p>
 				<code>omp4j</code> is an open-source OpenMP-like preprocessor for Java. It is easy-to-use, user-friendly
-				and fun. Discover enjoyable way of portable and  highly scalable multiprocessing in Java.
+				and fun. Discover an enjoyable way of developing portable and highly scalable concurrent applications in Java.
 			</p>
 			<p>
-				All you need to do is write a proper comment before the serially invoked for-loop. Any child can do it!
+				Simply write a proper comment before the for-loop of a statement. Nothing more!
 			</p>
 			<p>
-				<a class="btn btn-lg btn-primary" href="/tutorial" role="button">Discover &raquo;</a>
+				<a class="btn btn-lg btn-primary" href="/tutorial" role="button">Discover more &raquo;</a>
 			</p>
 		</div>
 
@@ -27,21 +27,21 @@
 	<div class="col-md-4">
 		<h3><a href="/download">Download omp4j!</a></h3>
 		<p>
-			Download the preprocessor or the source itself.
+			Download, install develop. Simple setup in 3 steps!
 		</p>
 	</div>
 
 	<div class="col-md-4">
 		<h3><a href="/tutorial">Get started!</a></h3>
 		<p>
-			Walk through the tutorial and examples.
+			Dive in the directives. Plenty of examples and tips.
 		</p>
 	</div>
 
 	<div class="col-md-4">
-		<h3><a href="/demo">Try it online!</a></h3>
+		<h3><a href="/demo">Try demo online!</a></h3>
 		<p>
-			Try the online preprocessing.
+			Try preprocessing online! For free and without installation.
 		</p>
 	</div>
 </div>
